--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,8 @@
     "bootstrap": "~3.3.1",
     "jquery": "~2.1.3",
     "fontawesome": "~4.2.0",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "fullpage": "~2.5.2",
+    "bootstrap-vertical-tabs": "~1.2.1"
   }
 }
